--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="banner">
-           <div class="banner-contant">
+           <div class="banner-content">
              <h1 class="banner-title">Brand New 
                 Group of Architects </h1>
                 <p class="banner-descripthon">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
@@ -31,7 +31,20 @@
         <img class="banner-image" src="images/banner.png" alt="">
     </header>
     <main>
+        <section class="teams display-flex">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="Two architect discussing about design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
 
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="features-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
