--- a/index.html
+++ b/index.html
@@ -45,9 +45,89 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-lighgt-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-lighgt-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-lighgt-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-lighgt-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+ Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
+        <section>
+            <h3 class="section-titles">Some facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the     majority have suffered alteration.</p>
+            <div class="facts-container">
+               <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winning</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Projects Finished</h>
+                    </div>
+               </div>
+               <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked </h5>
+                    </div>
+               </div>
+               <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+               </div>
+               </div>
+            </div>
+        </section>
+        <section class="sponsor-info">
+            <div class="our-sponsor ">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-company  display-flex">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer-area">
+        <div class="footer-content">
+            <P>All rights reserved copyright@2023 startup landing page design</P>
+        </div>
     </footer>
 </body>
 </html>
